kubernetes/Homepage/app/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: homepage
    namespace: homepage
    labels:
        app.kubernetes.io/name: homepage
spec:
    revisionHistoryLimit: 3
    replicas: 1
    strategy:
        type: RollingUpdate
    selector:
        matchLabels:
            app.kubernetes.io/name: homepage
    template:
        metadata:
            labels:
                app.kubernetes.io/name: homepage
        spec:
            serviceAccountName: homepage
            automountServiceAccountToken: true
            dnsPolicy: ClusterFirst
            enableServiceLinks: true
            containers:
                - name: homepage
                  image: "welp93/homepage:1.0"
                  resources:
                    requests:
                      memory: 128Mi
                      cpu: 100m
                  imagePullPolicy: Always
                  ports:
                      - name: http
                        containerPort: 3000
                        protocol: TCP
                  volumeMounts:
                      - mountPath: /app/config/custom.js
                        name: homepage-config
                        subPath: custom.js
                      - mountPath: /app/config/custom.css
                        name: homepage-config
                        subPath: custom.css
                      - mountPath: /app/config/bookmarks.yaml
                        name: homepage-config
                        subPath: bookmarks.yaml
                      - mountPath: /app/config/docker.yaml
                        name: homepage-config
                        subPath: docker.yaml
                      - mountPath: /app/config/kubernetes.yaml
                        name: homepage-config
                        subPath: kubernetes.yaml
                      - mountPath: /app/config/services.yaml
                        name: homepage-config
                        subPath: services.yaml
                      - mountPath: /app/config/settings.yaml
                        name: homepage-config
                        subPath: settings.yaml
                      - mountPath: /app/config/widgets.yaml
                        name: homepage-config
                        subPath: widgets.yaml
                      - mountPath: /app/config/logs
                        name: logs
            volumes:
                - name: homepage-config
                  configMap:
                      name: homepage
                - name: logs
                  emptyDir: {}
